--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
         alt="Imagem de uma bola de cristal">
         <h1>Vou revelar seu destino!</h1>
         <p>Clique em fazer pergunta para que seu destino seja revelado.</p>
-        <input type="text" placeholder="Digite sua pergunta" />
-        <button>Fazer pergunta</button>
+        <input id="inputPergunta" type="text" placeholder="Digite sua pergunta" />
+        <button onclick="fazerPergunta()">Fazer pergunta</button>
+
+        <h3 id="resposta"></h3>
     </div>
 </body>
+    <script src="script.js"></script>
 </html>
